--- a/contato.html
+++ b/contato.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Produtos — PrimeZilla</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Produtos — PrimeZilla</title>
+  <link rel="stylesheet" href="style.css">
 
 <style>
 /* ======== ESTILO MODELO LIFEPOD (MESMO DO INDEX) ======== */
@@ -47,40 +47,17 @@ body {
 }
 h2 {
   font-size: 26px;
-  margin-bottom: 16px;
-}
-
-/* CATEGORIAS */
-.cats {
-  display: flex;
-  gap: 10px;
   margin-bottom: 20px;
-  flex-wrap: wrap;
-}
-.catBtn {
-  background: #111;
-  border: 1px solid #333;
-  color: #ccc;
-  padding: 8px 16px;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: .2s;
-}
-.catBtn:hover,
-.catBtn.ativo-cat {
-  background: #00d4ff;
-  border-color: #00d4ff;
-  color: #000;
 }
 
-/* GRADE */
+/* GRID */
 .grid {
   display: grid;
   gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 
-/* CARD — MESMO DO INDEX */
+/* CARD */
 .card {
   background: #141414;
   border-radius: 14px;
@@ -127,8 +104,7 @@ select {
   margin-top: 4px;
 }
 
-/* BOTÃO — MESMO DO INDEX */
-.botao,
+/* BOTÃO */
 .btnBuy {
   background: linear-gradient(90deg, #00d4ff, #007ac1);
   color: #000;
@@ -139,7 +115,6 @@ select {
   cursor: pointer;
   transition: .2s;
 }
-.botao:hover,
 .btnBuy:hover {
   filter: brightness(1.2);
 }
@@ -156,6 +131,7 @@ select {
 </head>
 
 <body>
+
 <header class="topo">
   <div class="brand">
     <img src="https://res.cloudinary.com/duwsueept/image/upload/jq5bm4gwdwi3kpxgrago" class="logo" alt="PrimeZilla">
@@ -169,105 +145,95 @@ select {
 </header>
 
 <main class="container">
-  <h2>Produtos</h2>
-
-  <div class="cats">
-    <button class="catBtn ativo-cat" data-cat="all">Todos</button>
-    <button class="catBtn" data-cat="pods">Pods</button>
-    <button class="catBtn" data-cat="acessorios">Acessórios</button>
-    <button class="catBtn" data-cat="eletronicos">Eletrônicos</button>
-    <button class="catBtn" data-cat="outros">Outros</button>
-  </div>
-
-  <div id="productsGrid" class="grid">Carregando...</div>
+  <section class="catalog">
+    <h2>Todos os Produtos</h2>
+    <div id="productsGrid" class="grid">Carregando produtos...</div>
+  </section>
 </main>
 
 <footer class="footer">
   © 2025 PrimeZilla — SITE CRIADO POR @JHON_LORRAN_
 </footer>
 
-<script>
-/* === SEU SCRIPT ORIGINAL (SEM ALTERAR NADA) === */
-const PHONE = "5567992018672";
-function esc(s){
-  return String(s||'').replace(/[&<>"']/g, m =>
-    ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[m])
-  );
-}
-const grid = document.getElementById('productsGrid');
-const catButtons = [...document.querySelectorAll('.catBtn')];
-let produtos = [];
-async function loadProdutos(){
-  grid.innerHTML = 'Carregando...';
-  try {
-    const res = await fetch('produtos.json?' + Date.now());
-    produtos = await res.json();
-    render('all');
-  } catch(e){
-    console.error(e);
-    grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+  import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
+    authDomain: "primezilla-70b94.firebaseapp.com",
+    projectId: "primezilla-70b94",
+    storageBucket: "primezilla-70b94.firebasestorage.app",
+    appId: "1:910803172382:web:db82186d77b8281f13020f"
+  };
+
+  const PHONE = '5567992018672';
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  function esc(s){
+    return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
   }
-}
-function render(filter){
-  grid.innerHTML = "";
-  produtos.forEach(p => {
-    if(p.active === false) return;
-    if(filter !== "all" && String(p.category||"").toLowerCase() !== filter) return;
-    const img = p.imageUrl || p.image || "placeholder.png";
-    const priceText = p.price !== undefined
-      ? `${p.currency || 'R$'} ${Number(p.price).toFixed(2)}`
-      : "Consultar valores";
-    const card = document.createElement("div");
-    card.className = "card";
-    card.innerHTML = `
-      <div class="media"><img src="${esc(img)}"></div>
-      <div class="info">
-        <h3>${esc(p.name)}</h3>
-        <p class="price">${esc(priceText)}</p>
-        <div class="controls">
-          <label>Quantidade
-            <select class="qty">
-              <option>1</option><option>2</option><option>3</option>
-            </select>
-          </label>
-          <label>${p.type === "pod" ? "Sabor" : "Cor"}
-            <select class="variant">
-              ${(p.options || []).map(o => `<option>${esc(o)}</option>`).join("")}
-            </select>
-          </label>
-          <label>Pagamento
-            <select class="pay">
-              <option>PIX</option><option>Dinheiro</option><option>Cartão</option>
-            </select>
-          </label>
-          <button class="btnBuy">Comprar no WhatsApp</button>
-        </div>
-      </div>
-    `;
-    card.querySelector(".btnBuy").addEventListener("click", () => {
-      const qtd = card.querySelector(".qty").value;
-      const variant = card.querySelector(".variant").value;
-      const pay = card.querySelector(".pay").value;
-      const label = p.type === "pod" ? "Sabor" : "Cor";
-      const message = encodeURIComponent(
-        `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${label}: ${variant}\nPagamento: ${pay}`
-      );
-      window.open(`https://wa.me/${PHONE}?text=${message}`, "_blank");
+
+  document.addEventListener('DOMContentLoaded', ()=>{
+    const grid = document.getElementById('productsGrid');
+    const q = query(collection(db,'products'), orderBy('createdAt','desc'));
+
+    onSnapshot(q, snap => {
+      grid.innerHTML = '';
+      snap.forEach(doc => {
+        const p = doc.data();
+        if(!p.active) return;
+
+        const img = p.imageUrl || p.image || 'placeholder.png';
+        const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
+
+        const card = document.createElement('div');
+        card.className='card';
+
+        card.innerHTML = `
+          <div class="media"><img src="${esc(img)}" alt="${esc(p.name)}"></div>
+          <div class="info">
+            <h3>${esc(p.name)}</h3>
+            <p class="price">${esc(priceText)}</p>
+            <div class="controls">
+              <label>Quantidade
+                <select class="qty"><option>1</option><option>2</option><option>3</option></select>
+              </label>
+
+              <label>${p.type==='pod' ? 'Sabor' : 'Cor'}
+                <select class="variant">
+                  ${(p.options||[]).map(o=>`<option>${esc(o)}</option>`).join('')}
+                </select>
+              </label>
+
+              <label>Pagamento
+                <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
+              </label>
+
+              <button class="btnBuy">Comprar (WhatsApp)</button>
+            </div>
+          </div>
+        `;
+
+        card.querySelector('.btnBuy').addEventListener('click', ()=>{
+          const qtd = card.querySelector('.qty').value;
+          const variant = card.querySelector('.variant').value || '-';
+          const pay = card.querySelector('.pay').value;
+          const label = p.type==='pod' ? 'Sabor' : 'Cor';
+
+          const text = encodeURIComponent(
+            `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${label}: ${variant}\nPagamento: ${pay}`
+          );
+          window.open(`https://wa.me/${PHONE}?text=${text}`,'_blank');
+        });
+
+        grid.appendChild(card);
+      });
+
+      if(grid.innerHTML==='') grid.innerHTML = '<p>Nenhum produto disponível.</p>';
     });
-    grid.appendChild(card);
   });
-  if(!grid.children.length){
-    grid.innerHTML = "<p>Nenhum item nesta categoria.</p>";
-  }
-}
-catButtons.forEach(btn => {
-  btn.addEventListener("click", () => {
-    catButtons.forEach(b => b.classList.remove("ativo-cat"));
-    btn.classList.add("ativo-cat");
-    render(btn.dataset.cat);
-  });
-});
-loadProdutos();
 </script>
 
 </body>
